# GTPlanner

./: .dockerignore  .env.example  .gitignore  ASCll.txt  CLI响应格式混乱问题修复__2025-08-07T06-30-05.md  CONTRIBUTING.md  CURRENT_LLM_ARCHITECTURE_ANALYSIS.md  Dockerfile  FIELD_SIMPLIFICATION.md  FUNCTION_CALLING_IMPLEMENTATION_SUMMARY.md  GTPlanner.code-workspace  LICENSE.md  OPTIMIZATION_SUMMARY.md  PRD.md  REACT_IMPLEMENTATION_SUMMARY.md  REACT_OPTIMIZATION_PLAN.md  README.md  README.md.bak  README_ja.md  README_zh-CN.md  README_zh.md  README_zh.md.bak  SIMPLIFIED_FUNCTION_CALLING_SUMMARY.md  TRACING_README.md  cli.py  cli_flow.py  configure_langfuse.sh  contribute.md  contribute_ja.md  contribute_zh.md  create_database.py  debug_cli_exact.py  debug_message_format.py  debug_streaming_tool_calls.py  doc.md  fastapi_main.py  filename_flow.py  gtplanner.py  main.py  manage_tool_index.py  (+22 more)
.github/: pull_request_template.md
agent/: README.md  __init__.py  agent_doc.md  code_cleanup_report.md  context_types.py  gtplanner.py  llm_utils.py  pocketflow_factory.py  shared.py  stateless_planner.py  tracing_guide.md
agent_builder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/v1/: chat.py  (+2 more)
cli/: __init__.py  context_compressor.py  gtplanner_cli.py  modern_gtplanner_cli.py  react_cli.py  real_time_streaming_display.py  session_manager.py  simple_cli.py  streaming_react_display.py
config/: openai_config.py
core/: context_compressor.py  unified_context.py
docs/: api-specification.md  context_refactoring_summary.md  design-longplan.md  design.md  fork-debug-status.md  fork-id-mismatch-fix.md  fork-performance-optimization.md  intelligent-compression.md  logging-system.md  main_agent_shared_state_changes.md  multilingual-guide.md  new-session-message-clear-fix.md  openai_function_call.md  research_agent_test_results.md  state-management-refactoring-analysis.md  state-management-refactoring-final-report.md  state-management-refactoring-progress.md  system-architecture.md  tool-call-deletion-fix.md  tool-call-progress-fix.md  tool-call-rendering-fix.md  tool-card-debug-logs.md  tool-card-issue-diagnosis.md  tool-result-json-fix.md  typescript-fixes-and-next-steps.md  workflow-analysis.md
examples/: asr_client_example.py  compression_demo.py  json_parser_examples.py  test_research_subflow.py  tracing_example.py
(+232 files in other folders)
