[project]
name = "gtplanner"
version = "0.1.0"
description = "GTPlanner: A PRD Generation Tool for Vibe Coding"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "pocketflow==0.0.1",
    "aiohttp >= 3.8.0",
    "json-repair>=0.45.0",
    "fastapi == 0.115.9",
    "uvicorn == 0.23.1",
    "uvicorn[standard] == 0.23.1",
    "fastmcp",
    "aiohttp >= 3.8.0",
    "python-dotenv>=1.0.0",
    "dynaconf>=3.1.12",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true



    

