[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtplanner"
version = "0.1.0"
description = "GTPlanner: A PRD Generation Tool for Vibe Coding"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "pocketflow==0.0.3",
    "pocketflow-agui==0.1.0",
    "pocketflow-tracing>=0.1.5",
    "aiohttp >= 3.12.14",
    "json-repair>=0.45.0",
    "fastapi == 0.115.9",
    "uvicorn == 0.23.1",
    "uvicorn[standard] == 0.23.1",
    "fastmcp",
    "aiohttp >= 3.8.0",
    "python-dotenv>=1.0.0",
    "dynaconf>=3.1.12",
    "rich>=13.0.0",
    "pydantic>=2.5.0",
]

[tool.setuptools.packages.find]
include = ["agent*", "utils*"]
exclude = ["mcp*", "static*", "assets*"]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]



    

